# fuuka-cata-link

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Project.md  README.md  Roadmap.md  docker-compose.test.yml  docker-compose.yml  feedback.txt  logs.txt  logs_summary.txt  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: config.py  main.py
src/bot/: filters.py  handlers.py  middlewares.py
src/scrapers/: __init__.py  base.py  facebook.py  github.py  instagram.py  reddit.py  tiktok.py  twitter.py  youtube.py
src/utils/: cache.py  diagnostics.py  formatters.py  gallery_dl.py  link_detector.py  media_handler.py  opengraph.py  ytdlp.py
tests/: conftest.py
tests/benchmarks/: benchmark_urls.py  conftest.py  test_bench_instagram.py  test_bench_reddit.py  test_bench_tiktok.py  test_bench_twitter.py  test_bench_youtube.py
tests/test_bot/: test_filters.py  test_handlers.py
tests/test_scrapers/: test_base.py  test_facebook.py  test_github.py  test_instagram.py  test_reddit.py  test_tiktok.py  test_twitter.py
tests/test_utils/: test_cache.py  test_formatters.py  test_gallery_dl.py  test_link_detector.py  test_opengraph.py
