[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuuka-cata-link"
version = "0.1.0"
description = "Telegram bot that extracts and reposts media from social media links"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13",
    "aiohttp>=3.10",
    "yt-dlp>=2024.0",
    "Pillow>=10.0",
    "structlog>=24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
browser = [
    "playwright>=1.47",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
